# ubuntu_setup

./: .gitignore  README.md
autocodeformatter/: README  astyle  install_format_scripts
env/: 60-core-pattern.conf  bash.local  cpp.screen  dot_inputrc  dot_screenrc  dot_vimrc
filetemplates/: CMakeLists.txt  FileTemplate.cpp  FileTemplate.h  FileTemplate.hpp
filetemplates/unittests/: CMakeLists.txt
filetemplates/unittests/tests/: TestTemplate.cpp
scripts/: checkCodeFormat  configure_applications.sh  configure_bash.sh  configure_ubuntu.sh  configure_unity.sh  format  formatFile  git-config.sh  gitBranchCleanup  init_repo.sh  install_packages.sh  install_vim_plugins.sh  makeDir  pre-commit  setup.sh
